<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Input.InputScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2"
            android:layout_marginBottom="15dp"
            >
            <EditText
                android:id="@+id/ed_fNum"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/num1"
                android:layout_weight="1"
                android:inputType="number"
                />

            <EditText
                android:id="@+id/ed_sNum"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/num2"
                android:inputType="number"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_result"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textAllCaps="false"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textAllCaps="false"
            android:visibility="visible"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:id="@+id/txt_addResult"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btn_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textAllCaps="false"
            android:visibility="visible"
            />
        <Button
            android:id="@+id/btn_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textAllCaps="false"
            android:visibility="visible"
            />
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textAllCaps="false"
            android:text="@string/btn_clear"
            />
    </LinearLayout>

</RelativeLayout>